# Credit-Card-Fraud-Detection

./: CreditCardFraudDetection.postman_collection.json  FraudDetection.ipynb  README.md
FraudDetectionPipeline/: Dockerfile  pyproject.toml  requirements.txt
FraudDetectionPipeline/app/: main.py  schemas.py
FraudDetectionPipeline/app/routes/: predictor.py
FraudDetectionPipeline/app/services/: modelloader.py  preprocessing.py
FraudDetectionPipeline/config/: config.yaml
FraudDetectionPipeline/mlbuild/: main.py
FraudDetectionPipeline/mlbuild/services/: database_utils.py  dataextraction.py  pipelinebuilder.py  pipelinerunner.py  preprocessing.py  testing.py  training.py
FraudDetectionPipeline/models/: credit_card_fraud.pkl  credit_card_fraud_classification_report.txt  credit_card_fraud_recall.txt  credit_card_fraud_roc.txt  credit_card_fraud_sample_prediction.txt
Fraudapp/: .gitignore  pyproject.toml  requirements.txt
Fraudapp/app/: logger.py  main.py
Fraudapp/app/service/: consumer.py  producer.py
Fraudapp/config/: config.yaml
Fraudapp/data/: results.csv
